get started for free button fix color contrast

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1, h2 {font-family: "Poppins", sans-serif;font-weight: 600;}
 h1, h2 {color: var(--very-dark-cyan);}
 button {background-color: #fff; border: none;border-radius: 50px;padding: .6rem;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;font-family: "Open Sans", sans-serif;font-weight: 700;}
 button:hover {opacity: 80%;}
-.free {border: none;border-radius: 50px;padding: 1.1rem;color: #fff;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;font-family: "Open Sans", sans-serif;font-weight: 700;background-color:hsl(322, 100%, 66%);}
+.free {border: none;border-radius: 50px;padding: 1.1rem;color: #fff;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;font-family: "Open Sans", sans-serif;font-weight: 700;background-color:#E0008E;}
 .free:hover {transform: scale(1.05);transition: transform 0.2s ease-in-out;}
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }/*general*/
